objects/maps__ShapeLayer__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>maps__CustomGeometry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Geometry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>maps__Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Folder</label>
        <referenceTo>maps__Folder__c</referenceTo>
        <relationshipLabel>Shape Layers</relationshipLabel>
        <relationshipName>ShapeLayers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__JobId__c</fullName>
        <label>Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Options__c</fullName>
        <label>Options</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__ShapeLayer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shape Layer</label>
        <referenceTo>maps__ShapeLayer__c</referenceTo>
        <relationshipLabel>Shape Layers</relationshipLabel>
        <relationshipName>ShapeLayers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MapsTerritories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Maps Shape Layer</label>
    <listViews>
        <fullName>maps__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Shape Layers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>